packages/design-preview/src/components/style.scss
@import "@wordpress/base-styles/breakpoints";
@import "@wordpress/base-styles/mixins";
@import "@automattic/typography/styles/fonts";

.design-preview {
	display: flex;
	flex-direction: column;
	height: 100%;

	@include break-xlarge {
		flex-direction: row;
		margin: 0;
		gap: 32px;
	}
}

.design-preview__sidebar {
	align-items: center;
	background-color: var(--color-body-background);
	border-bottom: 1px solid rgb(0 0 0 / 5%);
	box-shadow: -4px 0 8px rgb(0 0 0 / 7%);
	box-sizing: border-box;
	display: flex;
	height: 96px;
	inset-inline-start: 0;
	inset-inline-end: 0;
	overflow: auto;
	padding: 8px 24px 0;
	position: fixed;
	top: 0;
	z-index: z-index(".is-section-stepper", ".design-preview__sticky-variations");

	.design-preview__sidebar-action-buttons {
		display: none;
		position: sticky;
		bottom: 0;
		width: 100%;
		z-index: z-index("root", ".design-preview__sidebar-action-buttons");

		a,
		button {
			width: 100%;
			border-radius: 4px;
			box-shadow: 0 1px 2px rgb(0 0 0 / 5%);
		}

		@include break-xlarge {
			bottom: 8px;
			display: flex;
			flex-direction: column;
			gap: 8px;
			margin: 2rem 0 0;
		}
	}

	@include break-small {
		align-items: center;
		justify-content: center;
	}

	@include break-xlarge {
		border: 0;
		box-shadow: none;
		display: block;
		height: 100%;
		overflow: scroll;
		padding: 0;
		position: relative;
		width: 311px;
	}
}

.design-preview__sidebar-content {
	h2 {
		color: var(--studio-gray-100);
		display: none;
		font-size: $font-body-small;
		font-weight: 500;
		margin-bottom: 0.5rem;
	}

	.design-preview__sidebar-title {
		display: none;
		margin: 0;

		h1 {
			color: var(--studio-gray-100);
			font-family: $brand-serif;
			font-weight: 400;
			letter-spacing: -0.4px;
			line-height: 32px;
		}

		.design-picker-design-title__container {
			align-items: flex-start;
			display: flex;
			flex-direction: column-reverse;
			gap: 16px;
			justify-content: center;

			.premium-badge,
			.woocommerce-bundled-badge {
				letter-spacing: 0.2px;
				margin: 0;
			}
		}

		@include break-xlarge {
			display: block;
		}
	}

	.design-preview__sidebar-author {
		display: none;
		font-size: $font-body-small;

		@include break-xlarge {
			display: block;
			margin-top: 0.25rem;
		}
	}

	.design-preview__sidebar-badges {
		display: none;

		.premium-badge,
		.woocommerce-bundled-badge {
			letter-spacing: 0.2px;
			margin: 0;
		}

		.design-preview__sidebar-badge-category {
			background-color: rgba(0, 0, 0, 0.05);
			color: var(--studio-gray-100);
			border-radius: 4px;
			font-size: $font-body-extra-small;
			height: 20px;
			line-height: 20px;
			padding: 0 10px;

			&:is(button) {
				cursor: pointer;
			}
		}

		@include break-xlarge {
			display: flex;
			flex-wrap: wrap;
			gap: 8px 4px;
			margin-top: 0.75rem;
		}
	}

	.design-preview__sidebar-description {
		display: none;

		> p {
			color: var(--studio-gray-80);
			font-size: 1rem;
			line-height: 24px;

			button {
				color: var(--color-link);
				display: block;
				font-size: 1rem;
				line-height: 24px;
				padding: 0;

				&:active,
				&:focus {
					color: var(--color-link);
				}
			}
		}

		@include break-xlarge {
			display: block;
			margin-top: 2rem;
		}
	}

	@include break-xlarge {
		h2 {
			display: block;
		}
	}
}

.design-preview__style-variation-wrapper {
	padding: 3px;
}

.design-preview__sidebar-variations {
	display: block;

	> p {
		color: var(--studio-gray-100);
		display: none;
		font-size: 0.875rem;
		line-height: 20px;
	}

	.design-preview__sidebar-variations-grid {
		align-items: center;
		display: flex;
		gap: 8px;

		.design-preview__style-variation {
			flex-shrink: 0;
			width: 100px;
		}
	}

	@include break-xlarge {
		margin: 2rem 0 0;

		> p {
			display: block;
		}

		.design-preview__sidebar-variations-grid {
			box-sizing: border-box;
			display: grid;
			gap: 12px;
			grid-template-columns: repeat(2, 1fr);
			margin: 24px -5px 0;
			padding: 2px;
			width: 100%;

			.design-preview__style-variation {
				box-sizing: border-box;
				width: 100%;
			}
		}
	}
}

.design-preview__style-variation {
	cursor: pointer;
	position: relative;

	&:hover,
	&:focus-visible,
	&--is-selected {
		&::after {
			border-radius: 3px; /* stylelint-disable-line scales/radii */
			bottom: -3px;
			content: "";
			display: block;
			left: -3px;
			pointer-events: none;
			position: absolute;
			right: -3px;
			top: -3px;
		}
	}

	&:hover,
	&:focus-visible {
		&::after {
			box-shadow: 0 0 0 2px var(--studio-blue-50);
		}
	}

	&--is-selected {
		&::after {
			box-shadow: 0 0 0 2px var(--studio-gray);
		}
	}

	&:focus-visible {
		outline: none;
	}

	.edit-site-global-styles-preview__iframe {
		border-radius: 3px; /* stylelint-disable-line scales/radii */
		box-shadow: 0 0 0 1px rgb(0 0 0 / 10%);
		border: 0;
		display: block;
		max-height: 61.2903px;
		max-width: 100%;
		overflow: hidden;

		@include break-xlarge {
			max-height: 77.2258px;
		}
	}

	.design-picker__premium-badge {
		background-color: var(--color-neutral-80);
		color: var(--color-neutral-0);
		font-size: 0.75rem;
		margin: 0;
		padding: 2px 12px 2px 6px;
		position: absolute;
		top: 6px;
		left: 6px;
	}
}

.design-preview__site-preview {
	flex-grow: 1;
	position: relative;

	@include break-xlarge {
		margin-bottom: 32px;
	}

	.theme-preview__frame-wrapper {
		.theme-preview__frame {
			@media ( max-width: $break-xlarge ) {
				border: 0;
				border-radius: 0;
				box-shadow: none;
				height: 100%;
				max-width: none;
				width: 100%;
			}
		}
	}

	.device-switcher__toolbar {
		display: none;
		margin-top: -11px;

		@include break-xlarge {
			display: block;
		}
	}
}

.design-picker__premium-badge-tooltip.popover {
	z-index: z-index("root", ".design-picker__premium-badge-tooltip");

	&.is-top,
	&.is-top-left,
	&.is-top-right {
		.popover__arrow {
			border-top-color: var(--color-neutral-80);
			bottom: 4px;
		}
	}

	&.is-bottom,
	&.is-bottom-left,
	&.is-bottom-right {
		.popover__arrow {
			border-bottom-color: var(--color-neutral-80);
			top: 4px;
		}
	}

	.popover__arrow {
		&::before {
			content: none;
		}
	}

	.popover__inner {
		background-color: var(--color-neutral-80);
		color: var(--color-neutral-0);
		padding: 8px;
		-webkit-font-smoothing: antialiased;
	}
}

